fastapi+postgres/kubernetes/fastapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi-app
        image: hichemlamine/fastapi-postgresql:v1
        imagePullPolicy: Always  # Définit la politique de tirage de l'image sur Always
        ports:
        - containerPort: 80
