fastapi+postgres/kubernetes/fastapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-svc
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
